--- a/commercial/GA1/CarrierGrade/carrier-grade-dcn-overview.dita
+++ b/commercial/GA1/CarrierGrade/carrier-grade-dcn-overview.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic
   PUBLIC "-//OASIS//DTD DITA Topic//EN" "http://docs.oasis-open.org/dita/v1.1/OS/dtd/topic.dtd" ><topic xml:lang="en-us" id="topic4404">
-<title>HP Helion OpenStack® Carrier Grade: Distributed Cloud Networking (DCN) Overview</title>
+<title>HP Helion OpenStack® Carrier Grade: Distributed Cloud Networking (DCN) Overview Test</title>
 <titlealts>
 <searchtitle>HP Helion OpenStack® Carrier Grade: Distributed Cloud Networking Overview</searchtitle>
 </titlealts>
