--- a/api.copyright.dita
+++ b/api.copyright.dita
@@ -11,7 +11,9 @@
 <p>
 <!--PUBLISHED-->
  <!--./api.copyright.md-->
- <!--permalink: /api/copyright/--></p>
+ <!--permalink: /api/copyright/-->
+ <!--gregstest-->
+ </p>
 <section>
 <title>Identity</title>
 <p>Copyright © 2010-2013 OpenStack Foundation.   All rights reserved.</p>
