--- a/publiccloud/index.dita
+++ b/publiccloud/index.dita
@@ -116,7 +116,7 @@
 <tr valign="top">
 <td style="border-width : 0px;"><p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;"><span style=" background-color: transparent; text-decoration: none;"><a href="/cloudos/moonshot/">HP Cloud OS for Moonshot</a></span></p>
 </td>
-<td>Enables you to efficiently create and run cloud environments using Moonshot servers to support a wide range of complex IT demands, from cloud-based applications to social media, big data and mobility..
+<td>Enables you to efficiently create and run cloud environments using Moonshot servers to support a wide range of complex IT demands, from cloud-based applications to social media, big data and mobility.
 </td>
 </tr>
 -->
