New set of test file

--- a/docs.hpcloud.com.ditamap
+++ b/docs.hpcloud.com.ditamap
@@ -241,7 +241,7 @@
  <!--permalink: /helion/devplatform/1.2/als/admin/server/--> <topicref href="devplatform/1.2/helion/admin/server/1.2index.dita" locktitle="yes" navtitle="Server Configuration -- HP Helion 1.2 Development Platform "/>
  <!--permalink: /helion/devplatform/1.2/als/admin/server/aok/--> <topicref href="devplatform/1.2/helion/admin/server/1.2aok.dita" locktitle="yes" navtitle="AOK Authentication Server -- HP Helion 1.2 Development Platform "/>
  <!--permalink: /helion/devplatform/1.2/als/admin/server/configuration/--> <topicref href="devplatform/1.2/helion/admin/server/1.2configuration.dita" locktitle="yes" navtitle="Detailed Configuration -- HP Helion 1.2 Development Platform "/>
- <!--permalink: /helion/devplatform/1.2/als/admin/server/docker/--> <topicref href="devplatform/1.2/helion/admin/server/1.2docker.dita" locktitle="yes" navtitle="Docker and Fence {#docker-fence "Permalink to this headline"} -- HP Helion 1.2 Development Platform "/>
+ <!--permalink: /helion/devplatform/1.2/als/admin/server/docker/--> <topicref href="devplatform/1.2/helion/admin/server/1.2docker.dita" locktitle="yes" navtitle="Docker and Fence -- HP Helion 1.2 Development Platform "/>
  <!--permalink: /helion/devplatform/1.2/als/admin/server/logging/--> <topicref href="devplatform/1.2/helion/admin/server/1.2logging.dita" locktitle="yes" navtitle="Log Streams -- HP Helion 1.2 Development Platform "/>
  <!--permalink: /helion/devplatform/1.2/als/admin/server/operations/--> <topicref href="devplatform/1.2/helion/admin/server/1.2operations.dita" locktitle="yes" navtitle="Common Server Operations -- HP Helion 1.2 Development Platform "/>
  <!--permalink: /helion/devplatform/1.2/als/admin/server/router/--> <topicref href="devplatform/1.2/helion/admin/server/1.2router.dita" locktitle="yes" navtitle="ALS Router -- HP Helion 1.2 Development Platform "/>
