--- a/devplatform/helion/admin/server/1.1logging.dita
+++ b/devplatform/helion/admin/server/1.1logging.dita
@@ -5,6 +5,17 @@
 <prolog>
 <metadata>
 <othermeta name="layout" content="default"/>
+<othermeta name="product-version" content="HP Helion Development Platform"/>
+<othermeta name="product-version" content="HP Helion Development Platform 1.1"/>
+<othermeta name="role" content="Application Developer"/>
+<othermeta name="role" content="ISV Developer"/>
+<othermeta name="role" content="Service Developer"/>
+<othermeta name="role" content="Network Administrator"/>
+<othermeta name="role" content="Systems Administrator"/>
+<othermeta name="role" content="Security Engineer"/>
+<othermeta name="role" content="Jayme P"/>
+<othermeta name="product-version1" content="HP Helion Development Platform"/>
+<othermeta name="product-version2" content="HP Helion Development Platform 1.1"/>
 </metadata>
 </prolog>
 <body>
@@ -132,8 +143,7 @@ application-specific events from the <b>logyard_sieve</b> stream.</p>
 </ul>
 </section>
 <section>
-<title>
-<!-- id="system-drains" -->System Drains</title>
+<title id="system-drains"  >System Drains</title>
 <p>Drains for system log and cloud event streams can be added by admins
 with the <xref href="/helion/devplatform/1.1/als/admin/reference/kato-ref#kato-command-ref-log-drain-add" >kato log
 drain</xref>
@@ -168,8 +178,7 @@ instead, add the 'overwrite=1' option:</p>
 </codeblock>
 </section>
 <section>
-<title>
-<!-- id="log-format" -->Log Format</title>
+<title id="log-format">Log Format</title>
 <p>Log drains can emit entries in a variety of formats:</p>
 <ul>
 <li>verbatim (default): Log entries as they appear in the source log
@@ -256,8 +265,7 @@ and no format options ("-f") are specified. For example
 drain using the <i>systail</i> drain format.</p>
 </section>
 <section>
-<title>
-<!-- id="saving-custom-log-formats" -->Saving Custom Log Formats</title>
+<title id="saving-custom-log-formats">Saving Custom Log Formats</title>
 <p>Custom formats for drains can be saved as a named type in the Logyard
 configuration. To do this, add the formatting string to a new key in
 logyard/drainformats. For example, to save the log format used in the
@@ -323,8 +331,7 @@ timeout</i>
 </xref>, its status will change to FATAL.</p>
 </section>
 <section>
-<title>
-<!-- id="keys" -->Keys</title>
+<title id="keys" >Keys</title>
 <p>Each message in a log stream is prefixed with a key, identifying what
 type of message it is or to which log stream it belongs. The following
 keys are available for use in defining drains using the
@@ -337,16 +344,14 @@ add</i>
 </xref>.</p>
 </section>
 <section>
-<title>
-<!-- id="apptail" -->apptail</title>
+<title id="apptail"  >apptail</title>
 <codeblock>
   <codeph>apptail.\&lt;app.id\&gt;
 </codeph>
 </codeblock>
 </section>
 <section>
-<title>
-<!-- id="event" -->event</title>
+<title id="event" >event</title>
 <ul>
 <li>event.\&lt;eventname&gt;
 
@@ -424,8 +429,7 @@ add</i>
 </ul>
 </section>
 <section>
-<title>
-<!-- id="managing-the-systail-stream" -->Managing the systail stream</title>
+<title id="managing-the-systail-stream" >Managing the systail stream</title>
 <p>The list above shows the default systail keys. These can keys can be
 modified with the <xref href="/helion/devplatform/1.1/als/admin/reference/kato-ref#kato-command-ref-config" >
 <i>kato
@@ -485,8 +489,7 @@ config</i>
 described below:</p>
 </section>
 <section>
-<title>
-<!-- id="drain-timeouts" -->Drain Timeouts</title>
+<title id="drain-timeouts" >Drain Timeouts</title>
 <ul>
 <li>
 <p>
@@ -541,8 +544,7 @@ all nodes.</p>
 </ul>
 </section>
 <section>
-<title>
-<!-- id="user-drain-limit" -->User Drain Limit</title>
+<title id="user-drain-limit" >User Drain Limit</title>
 <ul>
 <li>
 <p>
@@ -610,8 +612,7 @@ missing data.</p>
 </ul>
 </section>
 <section>
-<title>
-<!-- id="debugging-logyard" -->Debugging Logyard</title>
+<title id="debugging-logyard"  >Debugging Logyard</title>
 <p>Use <codeph>kato log stream debug</codeph> to monitor
 Logyard-related log activity. The command tails the logyard, apptail,
 systail, and logyard_sieve streams.</p>
