--- a/devplatform/helion/admin/best-practices/1.0logging-examples1.dita
+++ b/devplatform/helion/admin/best-practices/1.0logging-examples1.dita
@@ -42,8 +42,7 @@ software or services:</p>
 <p>
 <b>Note</b>: Do not forward both application and system logs to the same destination.</p>
 <section>
-<title id="papertrail">
-<!-- id="papertrail" -->Papertrail</title>
+<title id="papertrail">Papertrail</title>
 <ol>
 <li>
 <xref href="https://papertrailapp.com/plans" scope="external" format="html" >Create an account for Papertrail</xref>
@@ -85,8 +84,7 @@ forwarding is formatted this way (see example in <xref href="/als/v1/admin/serve
 Formats</xref>).</p>
 </section>
 <section>
-<title id="loggly">
-<!-- id="loggly" -->Loggly</title>
+<title id="loggly">Loggly</title>
 <ol>
 <li>
 <xref href="https://app.loggly.com/pricing" scope="external" format="html" >Create an account for Loggly</xref>
@@ -139,9 +137,7 @@ kato log drain add drain-name tcp://logs.loggly.com:port#
 </codeblock>
 </section>
 <section>
-<title>
-<!-- id="splunk" -->
-<!-- id="splunk" -->Splunk</title>
+<title>Splunk</title>
 <ol>
 <li>
 <xref href="http://www.splunk.com/download" scope="external" format="html" >Set up Splunk Server</xref>.</li>
@@ -184,8 +180,7 @@ kato log drain add drain-name tcp://splunk-server-address:port#
 </codeblock>
 </section>
 <section>
-<title id="hello-world-custom-drain">
-<!-- id="hello-world-custom-drain" -->Hello World Custom Drain</title>
+<title id="hello-world-custom-drain">Hello World Custom Drain</title>
 <p>The command below starts a drain target server on a node and pipes it to a local file:</p>
 <codeblock>
   <codeph>nc -lk 0.0.0.0 10000 &gt; log-output.txt
