--- a/devplatform/helion/admin/best-practices/1.0logging-examples1.dita
+++ b/devplatform/helion/admin/best-practices/1.0logging-examples1.dita
@@ -80,7 +80,7 @@ suitable name.
 </ol>
 <p>
 <b>Note</b>: Papertrail requires systail log lines to have <codeph>&lt;13&gt;l</codeph> at the beginning of each line. Make sure the drain you are
-forwarding is formatted this way (see example in <xref href="/als/v1/admin/server/logging#logging-drains-save-format" >Saving Custom Log
+forwarding is formatted this way (see example in  Saving Custom Log
 Formats</xref>).</p>
 </section>
 <section>
