--- a/docs.hpcloud.com.ditamap
+++ b/docs.hpcloud.com.ditamap
@@ -17,12 +17,19 @@
  <!--permalink: /als/v1/--> <topicref href="devplatform/helion/1.0index.dita" locktitle="yes" navtitle="Application Lifecycle Service Documentation -- HP Helion 1.0 Development Platform "/>
  <!--permalink: /als/v1/admin/--> <topicref href="devplatform/helion/admin/1.0index.dita" locktitle="yes" navtitle="Application Lifecycle Service Admin Guide -- HP Helion 1.0 Development Platform "/>
  <!--permalink: /als/v1/admin/best-practices/--> <topicref href="devplatform/helion/admin/best-practices/1.0index.dita" locktitle="yes" navtitle="Best Practices -- HP Helion 1.0 Development Platform "/>
- <!--permalink: /als/v1/admin/best-practices/logging-examples/--> <topicref href="devplatform/helion/admin/best-practices/1.0logging-examples.dita" locktitle="yes" navtitle="Log Drain Examples -- HP Helion 1.0 Development Platform "/>
+ <!--permalink: /als/v1/admin/best-practices/logging-examples/-->
  <!--permalink: /als/v1/admin/console/--> <topicref href="devplatform/helion/admin/console/1.0index.dita" locktitle="yes" navtitle="Management Console (Admin View) -- HP Helion 1.0 Development Platform "/>
+ <topicref href="devplatform/helion/admin/console/1.0customize.dita" locktitle="yes"
+  navtitle="Customization -- HP Helion 1.0 Development Platform "/>
  <!--permalink: /als/v1/admin/console/app-store/--> <topicref href="devplatform/helion/admin/console/1.0app-store.dita" locktitle="yes" navtitle="Sample Applications -- HP Helion 1.0 Development Platform "/>
- <!--permalink: /als/v1/admin/console/customize/--> <topicref href="devplatform/helion/admin/console/1.0customize.dita" locktitle="yes" navtitle="Customization -- HP Helion 1.0 Development Platform "/>
+ <!--permalink: /als/v1/admin/console/customize/-->
+ <topicref href="devplatform/helion/admin/reference/1.0architecture.dita" locktitle="yes"
+  navtitle="Architectural Design -- HP Helion 1.0 Development Platform ">
+  <topicref href="devplatform/helion/admin/best-practices/1.0logging-examples.dita" locktitle="yes"
+   navtitle="Log Drain Examples -- HP Helion 1.0 Development Platform "/>
+ </topicref>
  <!--permalink: /als/v1/admin/reference/add-service/--> <topicref href="devplatform/helion/admin/reference/1.0add-service.dita" locktitle="yes" navtitle="Adding System Services -- HP Helion 1.0 Development Platform "/>
- <!--permalink: /als/v1/admin/reference/architecture/--> <topicref href="devplatform/helion/admin/reference/1.0architecture.dita" locktitle="yes" navtitle="Architectural Design -- HP Helion 1.0 Development Platform "/>
+ <!--permalink: /als/v1/admin/reference/architecture/-->
  <!--permalink: /als/v1/admin/reference/groups/--> <topicref href="devplatform/helion/admin/reference/1.0groups.dita"/> 
  <!--permalink: /als/v1/admin/reference/kato-ref/--> <topicref href="devplatform/helion/admin/reference/1.0kato-ref.dita" locktitle="yes" navtitle="Kato Command Reference -- HP Helion 1.0 Development Platform "/>
  <!--permalink: /als/v1/admin/reference/known-issues/--> <topicref href="devplatform/helion/admin/reference/1.0known-issues.dita" locktitle="yes" navtitle="Known Issues -- HP Helion 1.0 Development Platform "/>
