--- a/docs.hpcloud.com.ditamap
+++ b/docs.hpcloud.com.ditamap
@@ -14,7 +14,23 @@
 			</vrmlist>
 		</prodinfo>
 	</topicmeta>
- <!--permalink: /als/v1/--> <topicref href="devplatform/helion/1.0index.dita" locktitle="yes"
+ <!--permalink: /als/v1/-->
+ <topicref href="commercial/GA1/Landing/1.1commercial.landing.install.dita">
+  <topicref href="commercial/GA1/CarrierGrade/Admin_Guide/VSA/carrier.install-add-mgmt-group.dita"/>
+  <topicref href="commercial/GA1/CarrierGrade/Admin_Guide/VSA/carrier.install-vsa-cluster.dita"/>
+  <topicref href="commercial/GA1/Landing/1.1commercial.landing.network.dita"/>
+  <topicref href="commercial/GA1/Landing/1.1commercial.landing.security.dita"/>
+  <topicref href="commercial/GA1/Landing/1.1commercial.landing.services.dita"/>
+  <topicref href="commercial/GA1/Landing/1.1commercial.landing.start.dita"/>
+  <topicref href="commercial/GA1/Landing/1.1commercial.landing.storage.dita"/>
+  <topicref href="commercial/GA1/Landing/1.1commercial.landing.identity.dita"/>
+  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-APIExtensions.dita"/>
+  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-RBAC.dita"/>
+  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-bestpractice.dita"/>
+  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-components.dita"/>
+  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-metertypes.dita"/>
+  <topicref href="commercial/GA1/ceilometer/1.1commercial.services-reporting-troubleshoot.dita"/>
+ </topicref> <topicref href="devplatform/helion/1.0index.dita" locktitle="yes"
   navtitle="Application Lifecycle Service Documentation -- HP Helion 1.0 Development Platform ">
   <topicref href="devplatform/helion/admin/console/1.0app-store.dita" locktitle="yes"
    navtitle="Sample Applications -- HP Helion 1.0 Development Platform "/>
@@ -433,6 +449,123 @@
   <topicref
    href="commercial/GA1/CarrierGrade/UseCases/TasksforAdmins/Network/carrier-grade.dashboard.network.admin.delete.dita"
   />
+ </topicref>
+ <topicref href="devplatform/1.2/helion/1.2index.dita" locktitle="yes"
+  navtitle="Application Lifecycle Service Documentation -- HP Helion 1.2 Development Platform ">
+  <topicref href="devplatform/1.2/helion/admin/1.2index.dita" locktitle="yes"
+   navtitle="Application Lifecycle Service Admin Guide -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/best-practices/1.2index.dita" locktitle="yes"
+   navtitle="Best Practices -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/best-practices/1.2logging-examples.dita"
+   locktitle="yes" navtitle="Log Drain Examples -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/cluster/1.2index.dita" locktitle="yes"
+   navtitle="Cluster Setup -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/cluster/1.2cloud-init.dita" locktitle="yes"
+   navtitle="Using the cloud-init Package -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/cluster/1.2external-db.dita" locktitle="yes"
+   navtitle="External Data Services -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/cluster/1.2harbor.dita" locktitle="yes"
+   navtitle="Harbor TCP/UDP Port Service -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/console/1.2index.dita" locktitle="yes"
+   navtitle="Management Console (Admin View) -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/console/1.2app-store.dita" locktitle="yes"
+   navtitle="Sample Applications -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/console/1.2customize.dita" locktitle="yes"
+   navtitle="Management Console Customization -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/reference/1.2add-service.dita" locktitle="yes"
+   navtitle="Adding System Services -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/reference/1.2architecture.dita" locktitle="yes"
+   navtitle="Architectural Design -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/reference/1.2groups.dita" locktitle="yes"
+   navtitle="Managing Groups, Users and Limits (DEPRECATED) -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/reference/1.2kato-ref.dita" locktitle="yes"
+   navtitle="Kato Command Reference -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/reference/1.2known-issues.dita" locktitle="yes"
+   navtitle="Known Issues -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/reference/1.2troubleshoot.dita" locktitle="yes"
+   navtitle="Troubleshooting -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2index.dita" locktitle="yes"
+   navtitle="Server Configuration -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2aok.dita" locktitle="yes"
+   navtitle="AOK Authentication Server -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2configuration.dita" locktitle="yes"
+   navtitle="Detailed Configuration -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2docker.dita" locktitle="yes"
+   navtitle="Docker and Fence xx -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2logging.dita" locktitle="yes"
+   navtitle="Log Streams -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2operations.dita" locktitle="yes"
+   navtitle="Common Server Operations -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2router.dita" locktitle="yes"
+   navtitle="ALS Router -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/admin/server/1.2upgrade.dita" locktitle="yes"
+   navtitle="In-Place Upgrades of ALS Nodes and Clusters -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/1.2index.dita" locktitle="yes"
+   navtitle="Application Lifecycle Service User Guide -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/client/1.2index.dita" locktitle="yes"
+   navtitle="HP Helion Application Lifecycle Service Client -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/console/1.2index.dita" locktitle="yes"
+   navtitle="Management Console: User View -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2clojure.dita" locktitle="yes"
+   navtitle="Clojure -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2go.dita" locktitle="yes"
+   navtitle="Go -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2java.dita" locktitle="yes"
+   navtitle="Developing in Java -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2node.dita" locktitle="yes"
+   navtitle="Developing in Node -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2index.dita" locktitle="yes"
+   navtitle="Perl -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2catalyst.dita"
+   locktitle="yes" navtitle="Catalyst -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2cgiapppsgi.dita"
+   locktitle="yes" navtitle="CGI Application: PSGI -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2dancer.dita" locktitle="yes"
+   navtitle="Dancer -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2mason.dita" locktitle="yes"
+   navtitle="Mason -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2mojo.dita" locktitle="yes"
+   navtitle="Mojolicious -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2perlcgi.dita" locktitle="yes"
+   navtitle="Perl CGI -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2php.dita" locktitle="yes"
+   navtitle="Developing In PHP -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/python/1.2index.dita" locktitle="yes"
+   navtitle="Developing In Python -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/python/1.2django.dita"
+   locktitle="yes" navtitle="Deploying Django applications -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2ruby.dita" locktitle="yes"
+   navtitle="Developing In Ruby -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/quick-start/1.2index.dita" locktitle="yes"
+   navtitle="Prerequisites -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/services/1.2data-services.dita" locktitle="yes"
+   navtitle="Application Lifecycle Service Data Services -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/services/1.2filesystem.dita" locktitle="yes"
+   navtitle="Persistent File System -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/services/1.2memcached.dita" locktitle="yes"
+   navtitle="Memcached Service -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/services/1.2port-service.dita" locktitle="yes"
+   navtitle="Port Service (Harbor) -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/helion/user/services/1.2user-provided.dita" locktitle="yes"
+   navtitle="User-Provided Services -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/database/1.2database.java.dita" locktitle="yes"
+   navtitle="Java MySQL Database Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/database/1.2database.node.dita" locktitle="yes"
+   navtitle="Node MySQL Database Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/database/1.2database.php.dita" locktitle="yes"
+   navtitle="PHP MySQL Database Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/helloworld/1.2helloworld.java.dita" locktitle="yes"
+   navtitle="Java Hello World Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/helloworld/1.2helloworld.node.dita" locktitle="yes"
+   navtitle="Node Hello World Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/helloworld/1.2helloworld.php.dita" locktitle="yes"
+   navtitle="PHP Hello World Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/messaging/1.2messaging.java.dita" locktitle="yes"
+   navtitle="Java RabbitMQ Messaging Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/messaging/1.2messaging.node.dita" locktitle="yes"
+   navtitle="Node RabbitMQ Messaging Sample -- HP Helion 1.2 Development Platform "/>
+  <topicref href="devplatform/1.2/workbook/messaging/1.2messaging.php.dita" locktitle="yes"
+   navtitle="PHP RabbitMQ Messaging Sample -- HP Helion 1.2 Development Platform "/>
  </topicref> 
  <!--permalink: /helion/commercial/carrier/dashboard/managing/images/--> 
  <!--permalink: /helion/commercial/carrier/dashboard/managing/images/create/--> 
@@ -639,123 +772,7 @@
  <!--permalink: /helion/devplatform/1.1/workbook/messaging/java/-->
  <!--permalink: /helion/devplatform/1.1/workbook/messaging/node/-->
  <!--permalink: /helion/devplatform/1.1/workbook/messaging/php/-->
- <!--permalink: /helion/devplatform/1.2/als/--> <topicref href="devplatform/1.2/helion/1.2index.dita" locktitle="yes"
-  navtitle="Application Lifecycle Service Documentation -- HP Helion 1.2 Development Platform ">
-  <topicref href="devplatform/1.2/helion/admin/1.2index.dita" locktitle="yes"
-   navtitle="Application Lifecycle Service Admin Guide -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/best-practices/1.2index.dita" locktitle="yes"
-   navtitle="Best Practices -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/best-practices/1.2logging-examples.dita"
-   locktitle="yes" navtitle="Log Drain Examples -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/cluster/1.2index.dita" locktitle="yes"
-   navtitle="Cluster Setup -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/cluster/1.2cloud-init.dita" locktitle="yes"
-   navtitle="Using the cloud-init Package -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/cluster/1.2external-db.dita" locktitle="yes"
-   navtitle="External Data Services -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/cluster/1.2harbor.dita" locktitle="yes"
-   navtitle="Harbor TCP/UDP Port Service -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/console/1.2index.dita" locktitle="yes"
-   navtitle="Management Console (Admin View) -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/console/1.2app-store.dita" locktitle="yes"
-   navtitle="Sample Applications -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/console/1.2customize.dita" locktitle="yes"
-   navtitle="Management Console Customization -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/reference/1.2add-service.dita" locktitle="yes"
-   navtitle="Adding System Services -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/reference/1.2architecture.dita" locktitle="yes"
-   navtitle="Architectural Design -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/reference/1.2groups.dita" locktitle="yes"
-   navtitle="Managing Groups, Users and Limits (DEPRECATED) -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/reference/1.2kato-ref.dita" locktitle="yes"
-   navtitle="Kato Command Reference -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/reference/1.2known-issues.dita" locktitle="yes"
-   navtitle="Known Issues -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/reference/1.2troubleshoot.dita" locktitle="yes"
-   navtitle="Troubleshooting -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2index.dita" locktitle="yes"
-   navtitle="Server Configuration -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2aok.dita" locktitle="yes"
-   navtitle="AOK Authentication Server -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2configuration.dita" locktitle="yes"
-   navtitle="Detailed Configuration -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2docker.dita" locktitle="yes"
-   navtitle="Docker and Fence xx -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2logging.dita" locktitle="yes"
-   navtitle="Log Streams -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2operations.dita" locktitle="yes"
-   navtitle="Common Server Operations -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2router.dita" locktitle="yes"
-   navtitle="ALS Router -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/admin/server/1.2upgrade.dita" locktitle="yes"
-   navtitle="In-Place Upgrades of ALS Nodes and Clusters -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/1.2index.dita" locktitle="yes"
-   navtitle="Application Lifecycle Service User Guide -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/client/1.2index.dita" locktitle="yes"
-   navtitle="HP Helion Application Lifecycle Service Client -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/console/1.2index.dita" locktitle="yes"
-   navtitle="Management Console: User View -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2clojure.dita" locktitle="yes"
-   navtitle="Clojure -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2go.dita" locktitle="yes"
-   navtitle="Go -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2java.dita" locktitle="yes"
-   navtitle="Developing in Java -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2node.dita" locktitle="yes"
-   navtitle="Developing in Node -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2index.dita" locktitle="yes"
-   navtitle="Perl -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2catalyst.dita"
-   locktitle="yes" navtitle="Catalyst -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2cgiapppsgi.dita"
-   locktitle="yes" navtitle="CGI Application: PSGI -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2dancer.dita" locktitle="yes"
-   navtitle="Dancer -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2mason.dita" locktitle="yes"
-   navtitle="Mason -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2mojo.dita" locktitle="yes"
-   navtitle="Mojolicious -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/perl/1.2perlcgi.dita" locktitle="yes"
-   navtitle="Perl CGI -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2php.dita" locktitle="yes"
-   navtitle="Developing In PHP -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/python/1.2index.dita" locktitle="yes"
-   navtitle="Developing In Python -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/python/1.2django.dita"
-   locktitle="yes" navtitle="Deploying Django applications -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/deploy/languages/1.2ruby.dita" locktitle="yes"
-   navtitle="Developing In Ruby -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/quick-start/1.2index.dita" locktitle="yes"
-   navtitle="Prerequisites -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/services/1.2data-services.dita" locktitle="yes"
-   navtitle="Application Lifecycle Service Data Services -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/services/1.2filesystem.dita" locktitle="yes"
-   navtitle="Persistent File System -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/services/1.2memcached.dita" locktitle="yes"
-   navtitle="Memcached Service -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/services/1.2port-service.dita" locktitle="yes"
-   navtitle="Port Service (Harbor) -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/helion/user/services/1.2user-provided.dita" locktitle="yes"
-   navtitle="User-Provided Services -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/database/1.2database.java.dita" locktitle="yes"
-   navtitle="Java MySQL Database Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/database/1.2database.node.dita" locktitle="yes"
-   navtitle="Node MySQL Database Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/database/1.2database.php.dita" locktitle="yes"
-   navtitle="PHP MySQL Database Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/helloworld/1.2helloworld.java.dita" locktitle="yes"
-   navtitle="Java Hello World Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/helloworld/1.2helloworld.node.dita" locktitle="yes"
-   navtitle="Node Hello World Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/helloworld/1.2helloworld.php.dita" locktitle="yes"
-   navtitle="PHP Hello World Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/messaging/1.2messaging.java.dita" locktitle="yes"
-   navtitle="Java RabbitMQ Messaging Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/messaging/1.2messaging.node.dita" locktitle="yes"
-   navtitle="Node RabbitMQ Messaging Sample -- HP Helion 1.2 Development Platform "/>
-  <topicref href="devplatform/1.2/workbook/messaging/1.2messaging.php.dita" locktitle="yes"
-   navtitle="PHP RabbitMQ Messaging Sample -- HP Helion 1.2 Development Platform "/>
- </topicref>
+ <!--permalink: /helion/devplatform/1.2/als/-->
  <!--permalink: /helion/devplatform/1.2/als/admin/-->
  <!--permalink: /helion/devplatform/1.2/als/admin/best-practices/-->
  <!--permalink: /helion/devplatform/1.2/als/admin/best-practices/logging-examples/-->
@@ -822,22 +839,7 @@
  <!--permalink: /helion/devplatform/workbook/messaging/java/-->
  <!--permalink: /helion/devplatform/workbook/messaging/node/-->
  <!--permalink: /helion/devplatform/workbook/messaging/php/-->
- <!--permalink: /helion/openstack/1.1/landing/install/--> <topicref href="commercial/GA1/Landing/1.1commercial.landing.install.dita">
-  <topicref href="commercial/GA1/CarrierGrade/Admin_Guide/VSA/carrier.install-add-mgmt-group.dita"/>
-  <topicref href="commercial/GA1/CarrierGrade/Admin_Guide/VSA/carrier.install-vsa-cluster.dita"/>
-  <topicref href="commercial/GA1/Landing/1.1commercial.landing.network.dita"/>
-  <topicref href="commercial/GA1/Landing/1.1commercial.landing.security.dita"/>
-  <topicref href="commercial/GA1/Landing/1.1commercial.landing.services.dita"/>
-  <topicref href="commercial/GA1/Landing/1.1commercial.landing.start.dita"/>
-  <topicref href="commercial/GA1/Landing/1.1commercial.landing.storage.dita"/>
-  <topicref href="commercial/GA1/Landing/1.1commercial.landing.identity.dita"/>
-  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-APIExtensions.dita"/>
-  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-RBAC.dita"/>
-  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-bestpractice.dita"/>
-  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-components.dita"/>
-  <topicref href="commercial/GA1/ceilometer/1.1commerical.services-reporting-metertypes.dita"/>
-  <topicref href="commercial/GA1/ceilometer/1.1commercial.services-reporting-troubleshoot.dita"/>
- </topicref> 
+ <!--permalink: /helion/openstack/1.1/landing/install/--> 
  <!--permalink: /helion/openstack/1.1/landing/network/--> 
  <!--permalink: /helion/openstack/1.1/landing/security/--> 
  <!--permalink: /helion/openstack/1.1/landing/services/--> 
